--- a/TechVJ/template/dl.html
+++ b/TechVJ/template/dl.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="https://telegra.ph/file/ce285502810a08e490708.jpg" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>%s | LAHORIYA</title>
+    <title>%s | PROFESSOR</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>    
@@ -41,7 +41,7 @@
                         <img src="https://telegra.ph/file/ce285502810a08e490708.jpg" width="80" height="80" class="rounded" style="box-shadow: 3px 5px 11px black;" alt="">
                         <div class="p-3">
                             <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft " id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;" >LAHORIYA</h4>
-                            <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">LEGEND SIDHU MOOSEWALA</p>
+                            <p class="text-red-600 font-semibold wow animate__animated animate__fadeIn animate__delay-1s animate__infinite">PROFESSOR</p>
                         </div>
                     </div>
                     <a href="https://t.me/maam_movies_backup" target="_blank" class="btn btn-dark w-100 text-light fw-semibold flex justify-center items-center gap-2 mt-2 wow animate__animated animate__fadeInDown  ">
@@ -104,7 +104,7 @@
                     <div class="text-center w-100">
                         <div class="mt-3">
                             <h5 class="flex justify-center items-center gap-2">
-                                <span class="text-dark font-monospace" style="text-shadow: 3px 5px 11px rgb(126, 10, 80);">With Love</span>
+                                <span class="text-dark font-monospace" style="text-shadow: 3px 5px 11px rgb(126, 10, 80);">MAAM MOVIES</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-chat-heart" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" fill="#dc0303" d="M2.965 12.695a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2Zm-.8 3.108.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125ZM8 5.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
                                   </svg>
@@ -214,7 +214,7 @@
                             <img src="https://telegra.ph/file/ce285502810a08e490708.jpg" height="140px" class="rounded-3 " alt="logo">
                         </li>
                         <!-- <li class="nav-item justify-center items-center text-center">
-                            <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/VJ_Bots" target="_blank">Movies : </a>Run and managed by <a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://telegram.me/KingVj01" target="_blank">Indu(<a href="https://telegram.me/KingVj01" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Tech VJ</a>)</a> </h5></a>
+                            <a  class="nav-link h1 text-center sm:-m-1 -ms-4"><h5><a class="font-bold" href="https://t.me/Im_professor_22" target="_blank">Movies : </a>Run and managed by <a href="http://telegram.dog/maam_movies_backup" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">Adil</a> & <a href="https://t.me/Im_professor_22" target="_blank">Indu(<a href="https://t.me/Im_professor_22" target="_blank" class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-orange-500 to-pink-500">PROFESSOR</a>)</a> </h5></a>
                         </li> -->
                     </ul>
                 </div>
@@ -236,7 +236,7 @@
             var theDate=new Date() 
                 document.write(theDate.getFullYear()) 
         </script> Copyright :
-            <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://t.me/maam_movies_backup">Tech VJ</a>
+            <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://t.me/maam_movies_backup">PROFESSOR</a>
            
             All right reserved
         </div>   
